Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-10142 PL/SQL parser
  3. MDEV-11037

Diagnostics_area refactoring for user defined exceptions

    XMLWordPrintable

Details

    Description

      Currently members to store sqlstate, sql errno and sql condition level present in the following classes:

      • Sql_condition (m_returned_sqlstate, m_sql_errno, m_level)
      • Diagnostics_area (m_sql_errno, m_sqlstate)
      • Sql_condition_info (sql_errno, sql_state, level)
      • sp_condition_value (mysqlerr, sql_state)

      This produces a lot of duplicate code.
      For the purposes of MDEV-10587 we'll also have to add a pointer to user defined exceptions at least in the following classes:

      • Sql_condition
      • Sql_condition_info

      That will generate more duplicate code.
      To avoid code duplication, we'll introduce the following class hierarchy:

      Sql_state
        Sql_state_errno
          Diagnostics_area
          sp_condition_value
          Sql_state_errno_level
            Sql_condition_info
            Sql_condition   
      

      Attachments

        Issue Links

          Activity

            People

              bar Alexander Barkov
              bar Alexander Barkov
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 1d
                  1d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d
                  1d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.