MDEV-11037 Diagnostics_area refactoring for user defined exceptions